--- a/examples/hello-world.html
+++ b/examples/hello-world.html
@@ -8,6 +8,7 @@
     <script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@main/bundles/datastar.js"></script>
 </head>
 <body class="bg-white dark:bg-gray-900 text-lg max-w-xl mx-auto my-16">
+    <!-- hot reload -->
     <div data-signals-delay="400" class="bg-white dark:bg-gray-800 text-gray-500 dark:text-gray-400 rounded-lg px-6 py-8 ring shadow-xl ring-gray-900/5 space-y-2">
         <div class="flex justify-between items-center">
             <h1 class="text-gray-900 dark:text-white text-3xl font-semibold">
