Fix to use `data-init`

--- a/examples/hello-world-channel.html
+++ b/examples/hello-world-channel.html
@@ -33,7 +33,7 @@
             Start
         </button>
     </div>
-    <div class="my-16 text-8xl font-bold text-transparent" data-on:load="@get('/hello-world')"
+    <div class="my-16 text-8xl font-bold text-transparent" data-init="@get('/hello-world')"
         style="background: linear-gradient(to right in oklch, red, orange, yellow, green, blue, blue, violet); background-clip: text">
         <div id="message">Hello, world!</div>
     </div>
